@@ -19,10 +19,9 @@ with all sufficient information, see the ChangeLog file.
     [Feature #8976]
   * besides, --enable/--disable=frozen-string-literal options also have
     been introduced. [Feature #8976]
-  * command line option --debug or --debug=frozen-string-literal enable
+  * command line options --debug or --debug=frozen-string-literal enable
     additional debugging mode which shows created location with at frozen
-    object error (RuntimeError) even if string is dynamically created string
-    literal (for static string literals shows locations as default).
+    object error (RuntimeError).
     [Feature #11725]
 
 * safe navigation operator:
