@@ -1,3 +1,14 @@
+Thu Dec 10 02:01:41 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* compile.c (iseq_compile_each): do not add debug information
+	  without --debug or --debug=frozen-string-literal option
+	  because String#dup slows down with debug information.
+	  [Feature #11725]
+
+	* NEWS: apply about it.
+
+	* test/ruby/test_rubyoptions.rb: catch up this fix with refactoring.
+
 Thu Dec 10 00:06:56 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* iseq.c: rename methods
